sort.basic.lessons.sort.basic.selection.AlgSelectionSort.scala.code
def selectionSort() {
  var smallest = getValue(0)
  var mem = 0
  for (i<-0 until getValueCount()){
    for (j<-i to getValueCount()){
      if (getValue(j)<smallest){
        smallest=getValue(j)
        mem = j
      }
    }
    swap(i,j)
  }
}